# psesoftware

./: .gitignore  CMakeLists.txt  README.md  bulid.ps1  gAPHD.sln  gAPHD.vcxproj  gAPHD.vcxproj.filters
JuliaBackEnd/: BasicData.jl  Component.jl  DataExchanger.jl  ElectricalStandardLibrary_Capacitor.jl  ElectricalStandardLibrary_Ground.jl  ElectricalStandardLibrary_IGBT.jl  ElectricalStandardLibrary_IdealDiode.jl  ElectricalStandardLibrary_IdealVoltageSource.jl  ElectricalStandardLibrary_Inductor.jl  ElectricalStandardLibrary_Resistor.jl  ElectricalStandardLibrary_SquareWave.jl  Environment.jl  Equations.jl  Functions.jl  Media.jl  Parser.jl  PortType.jl  RestApi.jl  System2024_05_20T17_56_07.jl  System2024_05_20T17_58_00.jl  System2024_05_20T18_01_29.jl  System2024_05_20T18_02_05.jl  System2024_05_20T18_03_45.jl  System2024_05_20T18_05_32.jl  System2024_05_20T18_10_37.jl  System2024_05_20T18_11_19.jl  System2024_05_20T18_13_09.jl  System2024_05_20T18_19_56.jl  System2024_05_20T18_20_59.jl  System2024_05_20T18_22_07.jl  System2024_05_20T18_23_53.jl  System2024_05_20T18_32_02.jl  System2024_05_20T18_34_24.jl  System2024_05_20T18_37_06.jl  System2024_05_20T18_39_06.jl  System2024_05_22T03_50_32.jl
include/: ConnectionType.h  Controler.h  DndControler.h  DndTree.h  LibTreeModel.h  MetaData.h  Model.h  TreeModel.h  Variable.h  VariableType.h
src/: ConnectionType.cpp  Controler.cpp  DndControler.cpp  DndTree.cpp  LibTreeModel.cpp  MetaData.cpp  Model.cpp  TreeModel.cpp  Variable.cpp  VariableType.cpp  main.cpp
src/gui/: CardPiles.qml  main.qml  qml.qrc
src/gui/Connection/: ConnEdit.qml  ConnInput.qml  ConnVarInput.qml  ConnVarRow.qml  Conns.qml
src/gui/DndComp/: DataEditor.qml  DragComponent.qml  DropComponent.qml  Handle.qml  Node.qml  Resizer.qml
src/gui/MainMenu/: FileTree.qml  LibTree.qml  Menus.qml  MyMessage.qml  ProjectCreate.qml
src/gui/Model/: DndTreeView.qml  IconAndConn.qml  MaterialEditor.qml  Model.qml  ModelConnEdit.qml  ModelInput.qml  ModelList.qml  ModelMaterials.qml  ModelParaInput.qml  ModelSubSystem.qml  ModelVarPara.qml  TextEditor.qml
src/gui/System/: InitAndSet.qml  LibBrowser.qml  ProcessList.qml  System.qml  SystemInput.qml
src/gui/Variables/: VarEdit.qml  VarInput.qml  Vars.qml
